# dialectical-symbolic-ai

./: .gitignore  KIG_TEST.md  README.md  README_UPDATED.md  README_V02.md  king-test.md  temp.md
backend/: ecosystem.config.js  health_check.ts  (+12 more)
sdialectic-dspy/: .env.example  README.md  audit_report_2026-01-17_2342.md  environment.yml  generate_test_dataset.py  main.py  pyproject.toml  scaffolder.zsh  verify_api.py  verify_dataset.py  verify_integration.py  verify_persistence.py  verify_syntax.py
sdialectic-dspy/core/: config.py  gemini_client.py
sdialectic-dspy/core/kernel/: bootstrap.lisp  imported_knowledge.lisp  sbcl_bridge.py
sdialectic-dspy/datasets/: adapter_folio.py  biored_sample.json  dataset_500.json  folio_processed.json  golden_logic.json  test_dataset_qwen_spv_01.json
sdialectic-dspy/dspy_modules/: optimized_narrative.json  optimized_narrative_folio.json  optimized_narrative_v2.json  signatures.py
sdialectic-dspy/optimization/: debug_metrics.py  evaluate_model.py  instrumentation.py  metrics.py  optimize_biored.py  optimize_folio.py  optimize_narrative.py  optimize_v2.py  transform_biored.py
sdialectic-dspy/optimization/datasets/: training_data.py
sdialectic-dspy/sdialectic-core/: main.py  pyproject.toml
sdialectic-dspy/sdialectic-core/dspy_modules/: signatures.py
sdialectic-dspy/tests/: comparative_report.md  comparative_results.json  comparative_suite.py  test_bridge.py  test_cases.json  test_cases_mini.json  test_instrumentation.py  verify_deps.py  verify_local_ollama_connection.py  verify_pipeline_mock.py  visualize_results.py
(+133 files in other folders)
